// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default Lightbulb snapshot 1`] = `
.drUSaD {
  background-color: darkblue;
  padding: 70px;
}

.bDtkyv {
  border-radius: 50%;
  width: 200px;
  height: 200px;
  background-color: gray;
  box-shadow: inset -3px 2px 40px -2px white,    0 0 80px 10px transparent;
  -webkit-transition: all .3s;
  transition: all .3s;
  margin: 0 auto;
  opacity: .9;
}

.cOKrhy {
  position: relative;
  background: linear-gradient(    to bottom,    #999,    #999 50%,    #666 50%,    #666  );
  background-size: 100% 25px;
  width: 110px;
  height: 70px;
  margin: -15px auto 0;
}

.dHEbFS {
  background-color: #333;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  margin: -30px auto 0;
}

<div
  className="sc-bdVaJa drUSaD"
>
  <div
    className="sc-bwzfXH bDtkyv"
    color="#f8e897"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat cOKrhy"
  />
  <div
    className="sc-bxivhb dHEbFS"
  />
</div>
`;

exports[`renders red Lightbulb snapshot 1`] = `
.drUSaD {
  background-color: darkblue;
  padding: 70px;
}

.bDtkyv {
  border-radius: 50%;
  width: 200px;
  height: 200px;
  background-color: gray;
  box-shadow: inset -3px 2px 40px -2px white,    0 0 80px 10px transparent;
  -webkit-transition: all .3s;
  transition: all .3s;
  margin: 0 auto;
  opacity: .9;
}

.cOKrhy {
  position: relative;
  background: linear-gradient(    to bottom,    #999,    #999 50%,    #666 50%,    #666  );
  background-size: 100% 25px;
  width: 110px;
  height: 70px;
  margin: -15px auto 0;
}

.dHEbFS {
  background-color: #333;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  margin: -30px auto 0;
}

<div
  className="sc-bdVaJa drUSaD"
>
  <div
    className="sc-bwzfXH bDtkyv"
    color="red"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat cOKrhy"
  />
  <div
    className="sc-bxivhb dHEbFS"
  />
</div>
`;

exports[`renders yellow Lightbulb snapshot 1`] = `
.drUSaD {
  background-color: darkblue;
  padding: 70px;
}

.bDtkyv {
  border-radius: 50%;
  width: 200px;
  height: 200px;
  background-color: gray;
  box-shadow: inset -3px 2px 40px -2px white,    0 0 80px 10px transparent;
  -webkit-transition: all .3s;
  transition: all .3s;
  margin: 0 auto;
  opacity: .9;
}

.cOKrhy {
  position: relative;
  background: linear-gradient(    to bottom,    #999,    #999 50%,    #666 50%,    #666  );
  background-size: 100% 25px;
  width: 110px;
  height: 70px;
  margin: -15px auto 0;
}

.dHEbFS {
  background-color: #333;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  margin: -30px auto 0;
}

<div
  className="sc-bdVaJa drUSaD"
>
  <div
    className="sc-bwzfXH bDtkyv"
    color="yellow"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat cOKrhy"
  />
  <div
    className="sc-bxivhb dHEbFS"
  />
</div>
`;
